# bubblemon

./: .bzrignore  .cvsignore  .gitignore  .travis.yml  AUTHORS  COPYING  ChangeLog  INSTALL  LICENSE  Makefile.am  README  README.md  TODO  TRANSLATIONS  autogen.sh  ci.sh  configure.ac  configure.in  index.html  params.json  style.css
animated-screenshot/: README.md  bubblemon-27s.mov  bubblemon-recording-diff.diff
bubblemon/: .cproject  .cvsignore  .project  AUTHORS  CHANGES  COPYING  ChangeLog  DRAWING_REWRITE  FAQ  INSTALL  LICENSE  Makefile  Makefile.am  PROFILING  README  TODO  TRANSLATIONS  URL  VERSION  acconfig.h  autogen.sh  bubblemon.c  bubblemon.h  bubblemon.spec  colors.c  config.h.in  configure.in  flame.c  intltool-extract.in  intltool-merge.in  intltool-update.in  properties.c  properties.h  session.c  session.h
bubblemon/debian/: Makefile.am  bubblemon.conffiles  changelog  check_version  check_version.in  control  copyright  docs  rules
bubblemon/gnome/: .cvsignore  GNOME_BubblemonApplet.server  GNOME_BubblemonApplet.server.in.in  GNOME_BubblemonApplet.xml  Makefile.am  bubblemon-gnome1.desktop  bubblemon-gnome1.gnorba  bubblemon.schemas  bubblemon.schemas.in  bubblemon_applet.desktop  bubblemon_applet.gnorba
bubblemon/help/C/: Makefile.am  bubblemon-C.omf  bubblemon.xml
bubblemon/m4/: Makefile.am  Makefile.in
bubblemon/macros/: Makefile.am
bubblemon/macros/gnome/: Makefile.am
bubblemon/man/: Makefile.am  bubblemon-gnome1.1.in  bubblemon-gnome2.1.in  bubblemon.1.in  bubblemon_applet.1.in
bubblemon/man/hu/: Makefile.am  bubblemon-gnome1.1.in  bubblemon-gnome2.1.in  bubblemon_applet.1.in
bubblemon/man/sv/: Makefile.am  bubblemon-gnome1.1.in  bubblemon-gnome2.1.in  bubblemon_applet.1.in
bubblemon/omf-install/: Makefile.am  bubblemon-C.omf
bubblemon/packaging/: Makefile.am  bubblemon.spec.in  mkpackages.sh  mkrpms.sh
bubblemon/pixmaps/: Makefile.am
bubblemon/po/: .cvsignore  ChangeLog  Makefile.in.in  Makevars  POTFILES  POTFILES.in  ca.po  da.po  de.po  es.po  fi.po  fr.po  hu.po  is.po  it.po  ko.po  nl.po  no.po  pl.po  pt.po  pt_BR.po  ro.po  ru.po  sh.po  sv.po
bubblemon/src/: .cvsignore  Makefile.am  ackumulator.c  bubblemon-about-dialog.c  bubblemon-about-dialog.h  bubblemon-prefs-dialog.c  bubblemon-prefs-dialog.h  bubblemon.c  bubblemon.h  bubblemon_pref_dialog.glade  gnome1-meter.c  gnome1-netload.c  gnome1-ui.c  gnome2-ui.c  gnome2-ui.h  interfaces.h  mail.h  meter.h  msgInBottle.c  netload.c  netload.h  session.c  session.h  ui.h  unix-interfaces.c  unix-mail.c
debian/: control  copyright
gnome/: bubblemon_applet.desktop
icons/: Makefile.am
icons/16x16/: Makefile.am
icons/22x22/: Makefile.am
icons/48x48/: Makefile.am
macros/: compiler-flags.m4
man/: Makefile.am  bubblemon-program.1.in
man/hu/: Makefile.am  bubblemon-gnome2.1.in  bubblemon-program.1.in
man/sv/: Makefile.am  bubblemon-program.1.in
osx/: Bubblemon-Bridging-Header.h  BubblemonView.h  BubblemonView.m  BubblemonView.swift  INSTALL.md  INSTALL.txt  README-window-frame.txt  README.md  TODO-OSX.txt  appdmg.json  applePrivateHelpers.h  applePrivateHelpers.m  install.sh  makeDist.sh  makeDistZip.sh  osx-meter.c  set-plist-metadata.sh  set-version.sh  window-frame.blend  xctool-analyze-runner.sh
osx/Bubblemon Dock Tile Plugin/: Bubblemon Dock Tile Plugin-Info.plist  Bubblemon Dock Tile Plugin-Prefix.pch
osx/Bubblemon Menu Bar/: AppDelegate.swift  Info.plist  MainMenu.xib
osx/Bubblemon StatusItem/: AppDelegate.swift  Info.plist  MainMenu.xib
osx/Bubblemon TouchBar/: AppDelegate.swift  Info.plist
osx/Bubblemon TouchBar Helper/: AppDelegate.swift  Info.plist
osx/Bubblemon TouchBar Helper/Base.lproj/: MainMenu.xib
osx/Bubblemon TouchBar/Base.lproj/: MainMenu.xib
osx/BubblemonTouchBarWindow/: AppDelegate.swift  Info.plist  ViewController.swift  WindowController.swift
osx/BubblemonTouchBarWindow/Base.lproj/: Main.storyboard  MainMenu.xib
osx/BubblemonWindow/: AppDelegate.h  AppDelegate.m  AppDelegate.swift  BubblemonWindow-Info.plist  BubblemonWindow-Prefix.pch  Info.plist  main.m
osx/BubblemonWindow/en.lproj/: MainMenu.xib
osx/bubblemon/: AppDelegate.h  AppDelegate.m  AppDelegate.swift  Info.plist  bubblemon-Info.plist  bubblemon-Prefix.pch  main.m  main.swift
osx/bubblemon.xcodeproj/: project.pbxproj
osx/bubblemon.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
osx/bubblemon.xcodeproj/project.xcworkspace/xcuserdata/johan.xcuserdatad/: UserInterfaceState.xcuserstate
osx/bubblemon.xcodeproj/xcshareddata/xcschemes/: Bubblemon Dock Tile Plugin.xcscheme  Bubblemon Menu Bar.xcscheme  Bubblemon StatusItem.xcscheme  Bubblemon TouchBar Helper.xcscheme  Bubblemon TouchBar.xcscheme  BubblemonTouchBarWindow.xcscheme  BubblemonWindow.xcscheme  Debug.xcscheme  Release.xcscheme
osx/bubblemon.xcodeproj/xcuserdata/johan.xcuserdatad/xcschemes/: bubblemon.xcscheme  xcschememanagement.plist
osx/bubblemon/en.lproj/: MainMenu.xib
packaging/: Makefile.am  gnome-applet-bubblemon.spec  gnome-applet-bubblemon.spec.in
pixmaps/: README-icon.txt  README.md  dmg-background.blend  icon.blend  icon.png.icns
platform/: Makefile.am  xfce4
platform/gnome2/: GNOME_BubblemonApplet.xml
platform/gnome3/: Makefile.am  bubblemon-menu.xml  org.gnome.panel.BubblemonApplet.panel-applet.in.in  org.gnome.panel.applet.BubblemonAppletFactory.service.in
po/: ChangeLog  Makevars  POTFILES.in  ca.po  da.po  de.po  es.po  fi.po  fr.po  hu.po  is.po  it.po  ko.po  nl.po  no.po  pl.po  pt.po  pt_BR.po  ro.po  ru.po  sv.po
src/: Makefile.am  accumulator.c  accumulator.h  ackumulator.h  bubblemon.c  bubblemon.h  dynamic-accumulator.c  dynamic-accumulator.h  gnome1-meter.c  gnome1-netload.c  gnome2-ui.c  gnome2-ui.h  gnome3-ui.c  gnome3-ui.h  meter.h  msgInBottle.c  ui.h  unix-mail.c  unix-memory-pressure.c  xfce4-ui.c  xfce4-ui.h
stylesheets/: styles.css
xfce/: Makefile.am  bubblemon.desktop.in.in
