# Tell am/ac to include these files in the distribution
EXTRA_DIST = bubblemon-gnome1.gnorba bubblemon-gnome1.desktop

# Tell am/ac to install them to the correct locations
sysdir = $(GNOME_DATADIR)/applets/Monitors
sys_DATA = bubblemon-gnome1.desktop

gnorbadir = $(GNOME_SYSCONFDIR)/CORBA/servers
gnorba_DATA = bubblemon-gnome1.gnorba
